--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <title>Apeperia - aplicativos sob medida</title>
@@ -29,7 +29,8 @@
     <a href="#" class="cabecalho-logo">
       <h1>
         <svg width="205" height="59" viewBox="0 0 205 59" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-          <desc>Created using Figma</desc>
+          <title>Logotipo da apeperia</title>
+          <!-- <desc>Created using Figma</desc> -->
           <g id="Canvas" transform="translate(-2230 1001)">
             <g id="Logo do Apeperia">
               <g id="Oval 1">
@@ -70,6 +71,9 @@
       <h2 class="secaoDestaque-titulo">
         APLICATIVOS NA MEDIDA
       </h2>
+      <!-- <h2 class="secaoDestaque-titulo" lang="en">
+        FRASE TESTE - THE BOOK IS ON THE TABLE
+      </h2> -->
       <p class="secaoDestaque-texto">
         A Apeperia é uma startup com um jeito inovador de comprar e montar aplicativos mobile e web para pequenas e médias empresas
       </p>
@@ -112,7 +116,7 @@
 
     <section class="secaoSobre clearfix">
       <div class="container">
-        <img src="img/sobre-apeperia.png" class="secaoSobre-imgDestaque">
+        <img src="img/sobre-apeperia.png" class="secaoSobre-imgDestaque" alt>
         <h2 class="secaoSobre-titulo tituloPadrao">
           SOBRE
         </h2>
@@ -129,10 +133,10 @@
         </p>
 
         <ul class="secaoSobre-plataformas">
-          <li><img src="img/android.png" alt="Ícone do Android"></li>
-          <li><img src="img/blackberry.png" alt="Ícone da Blackberry"></li>
-          <li><img src="img/apple.png" alt="Ícone do iOS"></li>
-          <li><img src="img/windowsphone.png" alt="Ícone do Windows Phone"></li>
+          <li><img src="img/android.png" alt="Android"></li>
+          <li><img src="img/blackberry.png" alt="Blackberry"></li>
+          <li><img src="img/apple.png" alt="iOS"></li>
+          <li><img src="img/windowsphone.png" alt="Windows Phone"></li>
         </ul>
         <p>
           Desenvolvemos aplicativos para todas as plataformas
@@ -205,7 +209,7 @@
 
         <li id="new0" class="listaDeArtigos-item">
           <article class="listaDeArtigos-artigo">
-            <img src="img/10-aplicativos-mais-baixados.png" class="listaDeArtigos-artigo-img">
+            <img src="img/10-aplicativos-mais-baixados.png" class="listaDeArtigos-artigo-img" alt="Teclado da Apple e de um celular android">
             <h2 class="listaDeArtigos-artigo-titulo">
               Conheça os 10 aplicativos mais badalados do momento
             </h2>
@@ -220,7 +224,7 @@
 
         <li id="new1" class="listaDeArtigos-item">
           <article class="listaDeArtigos-artigo">
-            <img src="img/ux-usabilidade.jpg" class="listaDeArtigos-artigo-img">
+            <img src="img/ux-usabilidade.jpg" class="listaDeArtigos-artigo-img" alt="Pessoa segurando um celular">
             <h2 class="listaDeArtigos-artigo-titulo">
               Usabilidade: Entenda os benefícios de treinar sua equipe em UX
             </h2>
@@ -235,7 +239,7 @@
 
         <li id="new2" class="listaDeArtigos-item">
           <article class="listaDeArtigos-artigo">
-            <img src="img/dicas-acessibilidade.jpg" class="listaDeArtigos-artigo-img">
+            <img src="img/dicas-acessibilidade.jpg" class="listaDeArtigos-artigo-img" alt="Pessoas levantando um senhor para ver melhor o show">
             <h2 class="listaDeArtigos-artigo-titulo">
               5 dicas para melhorar a acessibilidade em sua interface
             </h2>
@@ -278,7 +282,7 @@
 
         <a href="http://blog.apeperia.com.br/design/conheca-primeiras-etapas-criacao-logotipo-teste-teste" class="secaoDestaques-link">
           <div class="secaoDestaques-destaque">
-            <img src="img/comecando-criar-logotipo.png" class="secaoDestaques-destaque-img">
+            <img src="img/comecando-criar-logotipo.png" class="secaoDestaques-destaque-img" alt="Ferramentas de designer. Ilustração">
             <p class="secaoDestaques-destaque-titulo"  id="tituloDestaque1">
               Conheça as primeiras etapas na criação de um logotipo
             </p>
@@ -287,7 +291,7 @@
 
         <a href="http://blog.apeperia.com.br/design/dicas-como-fotografar-com-celular" class="secaoDestaques-link">
           <div class="secaoDestaques-destaque">
-            <img src="img/dicas-fotografia.png" class="secaoDestaques-destaque-img">
+            <img src="img/dicas-fotografia.png" class="secaoDestaques-destaque-img" alt="Moça mostrando câmera para rapaz">
             <p class="secaoDestaques-destaque-titulo"  id="tituloDestaque2">
               Veja dicas de como fotografar usando seu celular
             </p>
@@ -434,7 +438,7 @@
   <footer class="rodape">
     <div class="container">
 
-      <img src="img/logo-apeperia.svg" class="rodape-logo">
+      <img src="img/logo-apeperia.svg" class="rodape-logo" alt="Logotipo apeperia">
 
       <ul class="rodape-social">
         <li>
