--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
   <main class="conteudo" role="main">
 
     <section class="secaoDestaque">
-      <h2 class="secaoDestaque-titulo" id="conteudoPrincipal">
+      <h1 class="secaoDestaque-titulo" id="conteudoPrincipal">
         APLICATIVOS NA MEDIDA
-      </h2>
+      </h1>
       <!-- <h2 class="secaoDestaque-titulo" lang="en">
         FRASE TESTE - THE BOOK IS ON THE TABLE
       </h2> -->
@@ -153,25 +153,25 @@
         </h2>
 
         <div class="secaoPlanos-plano secaoPlanos-plano--start">
-          <h3 class="secaoPlanos-plano-titulo">Start</h3>
-          <h4 class="secaoPlanos-plano-preco">
+          <h3 class="secaoPlanos-plano-titulo"><span class="escondeVisualmente">Plano</span> Start</h3>
+          <span class="secaoPlanos-plano-preco">
             R$ 500
-          </h4>
+          </span>
           <ul class="secaoPlanos-plano-itens">
             <li>5 manutenções mensais</li>
             <li>App SEO</li>
             <li>1 sistema operacional</li>
           </ul>
           <a href="#" class="btnPadrao secaoPlanos-plano-btn">
-            Assinar plano
+            Assinar plano <span class="escondeVisualmente">Start por R$ 500</span>
           </a>
         </div>
 
         <div class="secaoPlanos-plano secaoPlanos-plano--ultra">
-          <h3 class="secaoPlanos-plano-titulo">Ultra</h3>
-          <h4 class="secaoPlanos-plano-preco">
+          <h3 class="secaoPlanos-plano-titulo"><span class="escondeVisualmente">Plano</span> Ultra</h3>
+          <span class="secaoPlanos-plano-preco">
             R$ 1500
-          </h4>
+          </span>
           <ul class="secaoPlanos-plano-itens">
             <li>20 manutenções mensais</li>
             <li>App SEO</li>
@@ -179,22 +179,22 @@
             <li>24h de atendimento</li>
           </ul>
           <a href="#" class="btnPadrao secaoPlanos-plano-btn">
-            Assinar plano
+            Assinar plano <span class="escondeVisualmente">Ultra por R$ 1500</span>
           </a>
         </div>
 
         <div class="secaoPlanos-plano secaoPlanos-plano--mega">
-          <h3 class="secaoPlanos-plano-titulo">Mega</h3>
-          <h4 class="secaoPlanos-plano-preco">
+          <h3 class="secaoPlanos-plano-titulo"><span class="escondeVisualmente">Plano</span> Mega</h3>
+          <span class="secaoPlanos-plano-preco">
             R$ 1000
-          </h4>
+          </span>
           <ul class="secaoPlanos-plano-itens">
             <li>10 manutenções mensais</li>
             <li>App SEO</li>
             <li>2 sistemas operacionais</li>
           </ul>
           <a href="#" class="btnPadrao secaoPlanos-plano-btn">
-            Assinar plano
+            Assinar plano <span class="escondeVisualmente">Mega por R$ 1000</span>
           </a>
         </div>
 
@@ -211,7 +211,7 @@
 
         <li id="new0" class="listaDeArtigos-item">
           <article class="listaDeArtigos-artigo">
-            <img src="img/10-aplicativos-mais-baixados.png" class="listaDeArtigos-artigo-img" alt="Teclado da Apple e de um celular android">
+            <img src="img/10-aplicativos-mais-baixados.png" class="listaDeArtigos-artigo-img" alt>
             <h2 class="listaDeArtigos-artigo-titulo">
               Conheça os 10 aplicativos mais badalados do momento
             </h2>
@@ -226,7 +226,7 @@
 
         <li id="new1" class="listaDeArtigos-item">
           <article class="listaDeArtigos-artigo">
-            <img src="img/ux-usabilidade.jpg" class="listaDeArtigos-artigo-img" alt="Pessoa segurando um celular">
+            <img src="img/ux-usabilidade.jpg" class="listaDeArtigos-artigo-img" alt>
             <h2 class="listaDeArtigos-artigo-titulo">
               Usabilidade: Entenda os benefícios de treinar sua equipe em UX
             </h2>
@@ -241,7 +241,7 @@
 
         <li id="new2" class="listaDeArtigos-item">
           <article class="listaDeArtigos-artigo">
-            <img src="img/dicas-acessibilidade.jpg" class="listaDeArtigos-artigo-img" alt="Pessoas levantando um senhor para ver melhor o show">
+            <img src="img/dicas-acessibilidade.jpg" class="listaDeArtigos-artigo-img" alt>
             <h2 class="listaDeArtigos-artigo-titulo">
               5 dicas para melhorar a acessibilidade em sua interface
             </h2>
