--- a/index.html
+++ b/index.html
@@ -208,9 +208,11 @@
         BLOG
       </h2>
 
-      <ul class="listaDeArtigos">
+      <h3 id="tituloBlog" class="escondeVisualmente">Lista de artigos</h3>
 
-        <li id="new0" class="listaDeArtigos-item">
+      <ol class="listaDeArtigos" aria-labelledby="tituloBlog">
+
+        <li id="new0" class="listaDeArtigos-item" data-noticia="0">
           <article class="listaDeArtigos-artigo">
             <img src="img/10-aplicativos-mais-baixados.png" class="listaDeArtigos-artigo-img" alt>
             <h2 class="listaDeArtigos-artigo-titulo">
@@ -225,7 +227,7 @@
           </article>
         </li>
 
-        <li id="new1" class="listaDeArtigos-item">
+        <li id="new1" class="listaDeArtigos-item" data-noticia="1">
           <article class="listaDeArtigos-artigo">
             <img src="img/ux-usabilidade.jpg" class="listaDeArtigos-artigo-img" alt>
             <h2 class="listaDeArtigos-artigo-titulo">
@@ -240,7 +242,7 @@
           </article>
         </li>
 
-        <li id="new2" class="listaDeArtigos-item">
+        <li id="new2" class="listaDeArtigos-item" data-noticia="2">
           <article class="listaDeArtigos-artigo">
             <img src="img/dicas-acessibilidade.jpg" class="listaDeArtigos-artigo-img" alt>
             <h2 class="listaDeArtigos-artigo-titulo">
@@ -255,13 +257,13 @@
           </article>
         </li>
 
-      </ul>
+      </ol>
 
       <nav>
         <ul class="listaDeArtigos-slider">
           <li>
             <a href="#new0" data-sliderItem="0" class="listaDeArtigos-slider-item listaDeArtigos-slider-item--ativo">
-              Notícia 1
+              Notícia 1 <span class="escondeVisualmente" id="escondeVisualmente">(Slide atual)</span>
             </a>
           </li>
           <li>
