--- a/index.html
+++ b/index.html
@@ -310,82 +310,82 @@
 
     </section> <!--fim .secaoDestaques-->
 
-    <section class="secaoContato" inert="true">
+    <section class="secaoContato">
       <div class="container">
         <h2 class="tituloPadrao">
           CONTATO
         </h2>
 
         <form class="secaoContato-form">
+          <fieldset>
+            <legend class="secaoContato-form-legend">
+              Oi, tudo bem? Fale com a gente!
+              Preencha seus dados e sua mensagem:
+            </legend>
 
-          <p class="secaoContato-form-legend">
-            Oi, tudo bem? Fale com a gente!
-            Preencha seus dados e sua mensagem:
-          </p>
+            <div class="contatoCampo contatoCampo--sucesso">
+              <label for="nome">Nome: </label>
+              <input type="text" id="nome" class="contatoCampo--validouFoi" placeholder="Nome..." required value="Natan Souza">
+            </div>  
 
-          <div class="contatoCampo contatoCampo--sucesso">
-            <label for="nome">Nome: </label>
-            <input type="text" id="nome" class="contatoCampo--validouFoi" placeholder="Nome..." required>
-          </div>  
+            <div class="contatoCampo contatoCampo--erro">
+              <label for="email">Email: </label>
+              <input type="email" id="email" class="contatoCampo--validouErro" placeholder="Email..." required value="contato@alura.com.br">
+              <span class="contatoCampo-msg contatoCampo-msg--erro">
+                Você quis dizer <a href="#">gmail.com?</a>
+              </span>
+            </div>
 
-          <div class="contatoCampo contatoCampo--erro">
-            <label for="email">Email: </label>
-            <input type="email" id="email" class="contatoCampo--validouErro" placeholder="Email..." required>
-            <span class="contatoCampo-msg contatoCampo-msg--erro">
-              Você quis dizer <a href="#">gmail.com?</a>
-            </span>
-          </div>
+            <div class="contatoCampo contatoCampo--erro">
+              <label for="telefone">Telefone: </label>
+              <input type="text" id="telefone" class="contatoCampo--validouErro" placeholder="(11) 5571-2751">
+              <span class="contatoCampo-msg contatoCampo-msg--erro">Faltou o DDD</span>
+            </div>     
 
-          <div class="contatoCampo contatoCampo--erro">
-            <label for="telefone">Telefone: </label>
-            <input type="text" id="telefone" class="contatoCampo--validouErro" placeholder="(11) 5571-2751">
-            <span class="contatoCampo-msg contatoCampo-msg--erro">Faltou o DDD</span>
-          </div>     
+            <div class="contatoCampo">
+              <label for="cep">CEP: </label>
+              <input type="text" id="cep" maxlength="8" placeholder="Exemplo: 04101-300" required>
+            </div>
 
-          <div class="contatoCampo">
-            <label for="cep">CEP: </label>
-            <input type="text" id="cep" maxlength="8" placeholder="Exemplo: 04101-300" required>
-          </div>
+            <div class="contatoCampo">
+              <label for="endereco">Endereço: </label>
+              <input type="text" id="endereco" class="contatoCampo-campoDesabilitado" readonly value="Rua Vergueiro">
+            </div>   
 
-          <div class="contatoCampo">
-            <label for="endereco">Endereço: </label>
-            <input type="text" id="endereco" class="contatoCampo-campoDesabilitado" readonly value="Rua Vergueiro">
-          </div>   
+            <div class="contatoCampo">
+              <label for="bairro">Bairro: </label>
+              <input type="text" id="bairro" class="contatoCampo-campoDesabilitado" readonly value="Vila Mariana">
+            </div>   
 
-          <div class="contatoCampo">
-            <label for="bairro">Bairro: </label>
-            <input type="text" id="bairro" class="contatoCampo-campoDesabilitado" readonly value="Vila Mariana">
-          </div>   
+            <div class="contatoCampo">
+              <label for="cidade">Cidade: </label>
+              <input type="text" id="cidade" class="contatoCampo-campoDesabilitado" readonly value="São Paulo">
+            </div>   
 
-          <div class="contatoCampo">
-            <label for="cidade">Cidade: </label>
-            <input type="text" id="cidade" class="contatoCampo-campoDesabilitado" readonly value="São Paulo">
-          </div>   
+            <div class="contatoCampo">
+              <label for="estado">Estado: </label>
+              <input type="text" id="estado" class="contatoCampo-campoDesabilitado" readonly value="SP">
+            </div>   
 
-          <div class="contatoCampo">
-            <label for="estado">Estado: </label>
-            <input type="text" id="estado" class="contatoCampo-campoDesabilitado" readonly value="SP">
-          </div>   
+            <div class="contatoCampo">
+              <label for="mensagem">Mensagem: </label>
+              <textarea name="" id="mensagem" cols="30" rows="10" required>Lorem ipsum</textarea>
+            </div>
 
-          <div class="contatoCampo">
-            <label for="mensagem">Mensagem: </label>
-            <textarea name="" id="mensagem" cols="30" rows="10" required></textarea>
-          </div>
+            <div class="contatoCampo">
+              <input type="checkbox" checked value="receberDestaques" class="contatoCampo-checkbox" id="receberEmail">
+              <label class="contatoCampo-label" for="receberEmail">Receber destaques por email</label>
+            </div>
 
-          <div class="contatoCampo">
-            <input type="checkbox" checked value="receberDestaques" class="contatoCampo-checkbox" id="receberEmail">
-            <label class="contatoCampo-label" for="receberEmail">Receber destaques por email</label>
-          </div>
-
-          <div class="contatoCampo">
-            <button class="secaoContato-form-cta btnPadrao" type="submit">
-              Enviar mensagem
-            </button>
-            <span class="contatoCampo-msg contatoCampo-msg--erro secaoContatoForm-validacao">
-              Verifique os erros acima
-            </span>
-          </div>
-
+            <div class="contatoCampo">
+              <button class="secaoContato-form-cta btnPadrao" type="submit">
+                Enviar mensagem
+              </button>
+              <span class="contatoCampo-msg contatoCampo-msg--erro secaoContatoForm-validacao">
+                Verifique os erros acima
+              </span>
+            </div>
+        </fieldset>
         </form>
       </div> <!--fim .container da .secaoContato-->
 
@@ -482,5 +482,6 @@
   <script src="js/carousel.js"></script>
   <script src="js/inert.js"></script>
   <script src="js/dialog.js"></script>
+  <script src="js/validacao-cep.js"></script>
 </body>
 </html>
