--- a/index.html
+++ b/index.html
@@ -328,11 +328,11 @@
               <input type="text" id="nome" class="contatoCampo--validouFoi" placeholder="Nome..." required value="Natan Souza">
             </div>  
 
-            <div class="contatoCampo contatoCampo--erro">
+            <div class="contatoCampo">
               <label for="email">Email: </label>
-              <input type="email" id="email" class="contatoCampo--validouErro" placeholder="Email..." required value="contato@alura.com.br">
-              <span class="contatoCampo-msg contatoCampo-msg--erro">
-                Você quis dizer <a href="#">gmail.com?</a>
+              <input type="email" id="email" placeholder="Email..." required value="contato@alura.com">
+              <span id="sugestao" class="contatoCampo-msg contatoCampo-msg--erro">
+                
               </span>
             </div>
 
@@ -344,7 +344,7 @@
 
             <div class="contatoCampo">
               <label for="cep">CEP: </label>
-              <input type="text" id="cep" maxlength="8" placeholder="Exemplo: 04101-300" required>
+              <input type="text" id="cep" maxlength="8" placeholder="Exemplo: 04101-300" required value="04101300">
             </div>
 
             <div class="contatoCampo">
@@ -483,5 +483,7 @@
   <script src="js/inert.js"></script>
   <script src="js/dialog.js"></script>
   <script src="js/validacao-cep.js"></script>
+  <script src="js/mailcheck.js"></script>
+  <script src="js/mailcheck-config.js"></script>
 </body>
 </html>
